RESOLVED FIXED233150
[LFC][IFC] Fix fast/text/basic/005.html
https://bugs.webkit.org/show_bug.cgi?id=233150
Summary [LFC][IFC] Fix fast/text/basic/005.html
alan
Reported 2021-11-15 14:39:36 PST
ssia
Attachments
Patch (3.42 KB, patch)
2021-11-15 16:15 PST, alan
no flags
Patch (3.51 KB, patch)
2021-11-16 07:25 PST, alan
no flags
alan
Comment 1 2021-11-15 16:15:11 PST
Antti Koivisto
Comment 2 2021-11-16 06:31:09 PST
Comment on attachment 444316 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=444316&action=review > Source/WebCore/ChangeLog:3 > + [LFC][IFC] Fix fast/text/basic/005.html (in context of preferred width computation) Someone might wonder why no test results change.
alan
Comment 3 2021-11-16 06:40:56 PST
(In reply to Antti Koivisto from comment #2) > Comment on attachment 444316 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=444316&action=review > > > Source/WebCore/ChangeLog:3 > > + [LFC][IFC] Fix fast/text/basic/005.html > > (in context of preferred width computation) > > Someone might wonder why no test results change. good point
alan
Comment 4 2021-11-16 07:25:15 PST
EWS
Comment 5 2021-11-16 08:38:59 PST
Committed r285863 (244289@main): <https://commits.webkit.org/244289@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444377 [details].
Radar WebKit Bug Importer
Comment 6 2021-11-16 08:39:25 PST
Note You need to log in before you can comment on or make changes to this bug.