[LFC][IFC] Fix fast/text/basic/005.html https://bugs.webkit.org/show_bug.cgi?id=233150

Reviewed by Antti Koivisto.

Negative word-spacing acts as negative margin, pulling the content to the left. In this patch we account for such negative values when
computing the overall content width.

Note that this patch is in preparation for enabling IFC preferred width computation.

* layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::appendTextContent):



Canonical link: https://commits.webkit.org/244289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285863 268f45cc-cd09-0410-ab3c-d52691b4dbfc